--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,8 @@
     <![endif]-->
   </head>
   <body>
-
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
